# swagger/swagger.yaml
@@ -4529,6 +4529,68 @@ paths:
                     type: string
                     example: "error message"
   /v1/marketplaces/couriers:
+    post:
+      tags:
+        - Marketplace
+      summary: Add courier
+      description: Add courier to marketplace
+      requestBody:
+        $ref: '#/components/requestBodies/AddCourierBody'
+      responses:
+        '201':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: OK
+                  message:
+                    type: string
+                    example: success
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "BAD_REQUEST"
+                  message:
+                    type: string
+                    example: "error message"                     
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "SHOP_NOT_REGISTERED"
+                  message:
+                    type: string
+                    example: "shop not found"                     
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "INTERNAL_SERVER_ERROR"
+                  message:
+                    type: string
+                    example: "error message"
+
+
     get:
       security:
         - BearerAuth: []
@@ -8278,6 +8340,45 @@ components:
                 format: numeric
                 minLength: 6
                 maxLength: 6
+    AddCourierBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - name
+              - code
+              - service
+            properties:
+              name:
+                type: string
+                example: JNE
+              code:
+                type: string
+                example: jne
+              service:
+                type: array
+                items:
+                  type: object
+                  required:
+                    - name
+                    - code
+                    - minDuration
+                    - maxDuration
+                  properties:
+                    name:
+                      type: string
+                      example: REG
+                    code:
+                      type: string
+                      example: reg
+                    minDuration:
+                      type: integer
+                      example: 1
+                    maxDuration:
+                      type: integer
+                      example: 3
     ChangePinRequestBody:
       required: true
       content:
